优化了对战时的逻辑，使用lua脚本来进行判断扣血逻辑，保证执行的原子性，优化了部分接口